maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:9: error: variable direction in class AbstractBuggle cannot be accessed in plm.runtime1.IslandMaze
    while(!(direction == nord && northOK() )){
            ^