maze.island.IslandMaze.scala.code
override def run() {
  while(!isOverBaggle()){
    while(northOK()){
      goNorth();
    }
    right();
    
    while(!(direction == nord && northOK() )){
      if(!hasWallLeft())
        placeWallLeft();
      keepHandOnSideWall();
    }
  }
  pickupBaggle();
}

var nord = Direction.NORTH;

def keepHandOnSideWall() {
  while(!isFacingWall()){
    forward();
    left();
  }
  right();
}

def hasWallLeft() : Boolean = {
  left();
  var isThere = isFacingWall();
  right();
  return isThere;
}

def placeWallLeft(){
  while(!isFacingWall()){
    forward();
  }
  right();
}

def northOK() : Boolean = {
  var dir = getDirection();
  setDirection(Direction.NORTH);
  var nOK = isFacingWall();
  setDirection(dir);
  return nOK;
}

def goNorth() {
  var dir = getDirection();
  setDirection(Direction.NORTH);
  forward();
  setDirection(dir);
}